# Landing_kit

./: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
kd-service/: .env.example  .gitignore  README.md  ecosystem.config.cjs  pyproject.toml  requirements.txt
kd-service/app/: __init__.py  api_models.py  elegibilidad.py  main.py  session_store.py  settings.py
kd-service/tests/: test_elegibilidad.py
server/: .env.example  .gitignore  README.md  ecosystem.config.cjs  package-lock.json  package.json
server/src/: config.js  index.js  logger.js
server/src/middlewares/: errorHandler.js  rateLimit.js
server/src/routes/: clickToCall.js  elegibilidad.js
server/src/services/: queueRouter.js  voipstudio.js
src/: App.jsx  main.jsx
src/components/layout/: ContactFormModal.css  ContactFormModal.jsx  CtaOpenLeadModalLink.jsx  EligeEquipoSection.css  EligeEquipoSection.jsx  EligibilityModal.css  EligibilityModal.jsx  FeaturesSection.css  FeaturesSection.jsx  FloatingContactButton.css  FloatingContactButton.jsx  Footer.css  Footer.jsx  GanasSection.css  GanasSection.jsx  Header.css  Header.jsx  KitCtaFormSection.css  KitCtaFormSection.jsx  KitDigitalSection.css  KitDigitalSection.jsx  (+16 more)
src/config/: leadWebhook.js
src/context/: ContactModalContext.jsx
src/hooks/: useEligibilityCheck.js  useLeadFormSubmit.js
src/legal/: privacy-article.html  terms-article.html
src/lib/: adsGtag.js
src/styles/: base.css  layout.css  poppins-weights.css
src/utils/: categoriaCatalog.js  siteVariant.js
